plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'com.adarshr.test-logger' version '3.1.0'
    id 'io.ebean' version '13.17.4'
}

group 'hexlet.code'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'io.ebean:querybean-generator:13.15.0'
    implementation 'com.h2database:h2:2.1.214'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'io.javalin:javalin-rendering:5.5.0'
    implementation 'io.javalin:javalin:5.5.0'
    implementation 'javax.activation:activation:1.1.1'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.0'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation 'org.slf4j:slf4j-simple:2.0.5'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
    implementation 'org.thymeleaf:thymeleaf:3.1.1.RELEASE'
    implementation 'org.webjars:bootstrap:5.2.3'
    implementation 'com.konghq:unirest-java:3.14.2'
    implementation 'org.jsoup:jsoup:1.16.1'
    testImplementation 'com.konghq:unirest-java:3.14.2'
    testImplementation 'org.assertj:assertj-core:3.24.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
}

application {
    mainClass = 'hexlet.code.App'
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

compileJava {
    options.release = 20
}

test {
    useJUnitPlatform()
}


testlogger {
    showStandardStreams true
}

task generateMigrations(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'hexlet.code.MigrationGenerator'
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}